Fix issue with image left hand gap in posts

--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -6,6 +6,16 @@
   text-align: center;
 }
 
+.ImageLink {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.ImageLink:hover {
+  scale: 1;
+}
+
 .Header {
   color: antiquewhite;
   font-size: 250%;
